# todo-list

./: .env  app.py  docker-compose.yml  pyproject.toml
src/todo_list/: __init__.py  config.py  extensions.py
src/todo_list/api/: dependencies.py
src/todo_list/models/: __init__.py  todo.py
src/todo_list/repositories/: todo.py
src/todo_list/schemas/: __init__.py  todo.py
src/todo_list/services.py/: __init__.py  todo.py
